--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "react-native-modalize-x2",
-  "version": "2.1.6",
+  "version": "2.1.7",
   "description": "A highly customizable modal/bottom sheet that loves scrolling content.",
   "main": "lib/index.js",
   "types": "./lib/index.d.ts",
   "scripts": {
     "build": "rm -rf ./lib/* && yarn lint && tsc",
-    "prepare": "yarn build",
+    "prepare": "yarn tsc",
     "lint": "eslint 'src/**/*.ts?(x)' && prettier --list-different \"**/*.{json,md,js,jsx,ts,tsx}\"",
     "prettier": "prettier --write \"{docs,examples,src}/**/*.{json,md,js,jsx,ts,tsx}\"",
     "postversion": "sh ./post-version.sh",
